; ModuleID = '/home/carl/AnghaBench/libgit2/tests/repo/extr_init.c_test_repo_init__reinit_too_recent_bare_repo.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/repo/extr_init.c_test_repo_init__reinit_too_recent_bare_repo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@_repo = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [11 x i8] c"reinit.git\00", align 1
@.str.1 = private unnamed_addr constant [29 x i8] c"core.repositoryformatversion\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_repo_init__reinit_too_recent_bare_repo() #0 {
  %1 = alloca i32*, align 8
  %2 = call i32 @git_repository_init(i32* @_repo, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i32 1)
  %3 = call i32 @cl_git_pass(i32 %2)
  %4 = load i32, i32* @_repo, align 4
  %5 = call i32 @git_repository_config(i32** %1, i32 %4)
  %6 = load i32*, i32** %1, align 8
  %7 = call i32 @git_config_set_int32(i32* %6, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.1, i64 0, i64 0), i32 42)
  %8 = call i32 @cl_git_pass(i32 %7)
  %9 = load i32*, i32** %1, align 8
  %10 = call i32 @git_config_free(i32* %9)
  %11 = load i32, i32* @_repo, align 4
  %12 = call i32 @git_repository_free(i32 %11)
  %13 = call i32 @git_repository_init(i32* @_repo, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i32 1)
  %14 = call i32 @cl_git_fail(i32 %13)
  %15 = call i32 @cl_fixture_cleanup(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_repository_init(i32*, i8*, i32) #1

declare dso_local i32 @git_repository_config(i32**, i32) #1

declare dso_local i32 @git_config_set_int32(i32*, i8*, i32) #1

declare dso_local i32 @git_config_free(i32*) #1

declare dso_local i32 @git_repository_free(i32) #1

declare dso_local i32 @cl_git_fail(i32) #1

declare dso_local i32 @cl_fixture_cleanup(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
